--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -223,6 +223,9 @@
                         &:nth-child(1) {
                             border-radius: 6px 6px 0 0;
                             border-right: 1px solid #ddd;
+                            &.active {
+                                border-right: 1px solid $blue;
+                            }
                             &:hover {
                                 border-right: 1px solid $blue;
                             }
