--- a/scss/style.scss
+++ b/scss/style.scss
@@ -93,7 +93,7 @@ a[x-apple-data-detectors] {
   text-align: center;
   line-height: normal;
 }
-
+@import '_header.scss';
 @import '_promo.scss';
 @import '_wins.scss';
 @import '_about.scss';
