--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,5 +1,5 @@
 .psb-form {
-    padding: 40px 0;
+    padding: 40px 0 120px;
     &__wrapper {
         display: flex;
         justify-content: space-between;
