--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,9 +1,47 @@
 header {
     box-shadow: 0px 1px 14px rgba(47, 61, 84, 0.15);
     padding: 9px 0 0;
+    .container {
+        max-width: 1456px;
+    }
     .btn {
         padding: 11px 25px 13px 16px;
         white-space: nowrap;
+        padding: 11px 24px 13px;
+        background: $blue;
+        
+        font-size: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        color: #FFFFFF;
+        border-radius: 6px;
+        width: fit-content;
+        cursor: pointer;
+        border: none;
+        &:hover {
+          background: #3473F4;
+          transition: all .3s;
+        }
+        &:active {
+          background: #104CC4;
+        }
+        &__burger {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: space-between;
+          width: 13px;
+          height: 12px;
+          margin-right: 12px;
+          span {
+            display: block;
+            height: 2px;
+            width: 100%;
+            background: #fff;
+          }
+        }
     }
     .city-modal {
         img {
@@ -128,6 +166,7 @@ header {
         z-index: 2;
        }
        &__btn {
+        background-color: #fff;
         border-radius: 6px;
         border: 2px solid $blue;
         width: 91px;
@@ -605,17 +644,7 @@ header {
 .btn__burger_active {
     background: url(../img/close_menu.svg) no-repeat center/cover;
     span {
-        // &:nth-child(1) {
-        //     transform: rotate(45deg) translateY(7px);
-        //     width: 12px;
-        // }
-        // &:nth-child(2) {
-        //     display: none;
-        // }
-        // &:nth-child(3) {
-        //     transform: rotate(-45deg) translateY(-7px);
-        //     width: 12px;
-        // }
+      
         display: none;
     }
 }
@@ -645,6 +674,7 @@ ul.menu li {
     }
 }
 .dropdown-toggle {
+    border: none;
     cursor: pointer;
     width: 26px;
     height: 23px;
