--- a/scss/style.scss
+++ b/scss/style.scss
@@ -93,13 +93,23 @@ a[x-apple-data-detectors] {
   text-align: center;
   line-height: normal;
 }
+.hide {
+  display: none;
+}
+.mobile {
+  display: none;
+}
+
 @import '_header.scss';
+@import '_banner.scss';
+
 @import '_promo.scss';
 @import '_wins.scss';
 @import '_about.scss';
 @import '_credit.scss';
 @import '_options.scss';
 @import '_form.scss';
+@import '_footer.scss';
 @import '_modal.scss';
 
 @import '_media.scss';
