remove header footer

--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -9,7 +9,7 @@
         padding: 75px 100px 110px;
         gap: 16px;
     }
-    .title {
+    .psb-title {
         text-align: left;
         margin-bottom: 24px;
         text-wrap: balance;
