--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,7 +30,7 @@ a[x-apple-data-detectors] {
     font-weight: inherit !important;
     line-height: inherit !important;
   }
-.container {
+.psb-container {
     max-width: 1208px;
     width: 90%;
     margin: 0 auto;
@@ -87,21 +87,15 @@ a[x-apple-data-detectors] {
     background-color: #104CC4;
   }
 }
-.title {
+.psb-title {
   font-weight: 600;
   font-size: 36px;
   text-align: center;
   line-height: normal;
 }
-.hide {
-  display: none;
-}
-.mobile {
-  display: none;
-}
 
-@import '_header.scss';
-@import '_banner.scss';
+
+
 
 @import '_promo.scss';
 @import '_wins.scss';
@@ -109,7 +103,7 @@ a[x-apple-data-detectors] {
 @import '_credit.scss';
 @import '_options.scss';
 @import '_form.scss';
-@import '_footer.scss';
+
 @import '_modal.scss';
 
 @import '_media.scss';
